# sdl2_input_test

./: CMakeLists.txt
src/: testInput.c
